--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -83,7 +83,7 @@ h3 {
   font-weight: normal;
   font-size: 20px;
   margin-bottom: 30px;
-  left: 3px;
+  left: 0px;
 }
 
 .intro-navigate{
@@ -121,19 +121,31 @@ h3 {
   color: #F0F0F0;
 }
 
+
+
 .article-entry{
   position: relative;
-  top:100px;
-  font-family: Arial,simsun,"宋体""Microsoft YaHei","微软雅黑";
+  bottom:-20px;
+  overflow: hidden;
+  font-family: Arial,simsun,"宋体","Microsoft YaHei","微软雅黑";
+  letter-spacing: 1.2px;
+  font-size: 25px;
+  margin-bottom: 0px;
+  text-align:left;
   letter-spacing: 1px;
-  font-size: 30px;
+  line-height: 30px;
+  max-width: 1040px;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  padding: 0 20px;
+}
+
+.outer{
   max-width: 1040px;
   margin: 0 auto;
   padding: 0 20px;
-  margin-bottom: 250px;
 }
-
-.article-entry hr{
+.article-entry hr {
     border: 1px dashed #eef1f8;
 }
 
